avanzando ejercicios react

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.container {
+  background-color: rgb(187, 241, 223);
+  border: 2px solid black;
+  padding: 15px;
+}
+
+.prueba {
+  color: rgb(247, 52, 159);
+}
